syntax = "proto3";

package gateway.payment;

option go_package = "/gateway/payment";

import "gateway/common.proto";
import "api.proto";


message CreditCardInfo {
    string credit_card_number = 1;
    int32 credit_card_cvv = 2;
    int32 credit_card_expiration_year = 3;
    int32 credit_card_expiration_month = 4;
}

message ChargeReq {
    float amount = 1;
    CreditCardInfo credit_card = 2;
    string order_id = 3;
    uint32 user_id = 4;
}

message ChargeResp {
    string transaction_id = 1;
}

service ChargeService {
    rpc PaymentCreate(ChargeReq) returns (common.Empty) {
        option (api.post) = "/payment";
    }
}